--- a/app/components/strategy/strategy.component.html
+++ b/app/components/strategy/strategy.component.html
@@ -1,5 +1,34 @@
-<div>
-  <h1>Strategy</h1>
-  <avam-strategy-order-ticket></avam-strategy-order-ticket>
-  <avam-strategy-definition></avam-strategy-definition>
+<div class="container-fluid">
+  <div class="card">
+    <div class="card-header">
+      <div class="row">
+        <div class="col-xs">
+          <input type="text" placeholder="Search Strategy..." class="form-control form-control-sm">
+        </div>
+        <div class="col-xs ">
+          <div class="text-xs-right">
+            <div class="input-group">
+              <span class="input-group-btn">
+                <button class="btn btn-sm btn-primary">Strategy Ticket</button>
+                </span>
+              <span class="input-group-btn">
+                  <button class="btn btn-sm btn-secondary">Create Strategy</button>
+                </span>
+
+
+            </div>
+
+
+          </div>
+
+        </div>
+      </div>
+    </div>
+    <div class="card-block">
+      <avam-strategy-order-ticket></avam-strategy-order-ticket>
+      <avam-strategy-definition></avam-strategy-definition>
+    </div>
+  </div>
+
+
 </div>
