--- a/styles.css
+++ b/styles.css
@@ -2,3 +2,8 @@ html{
       margin:0;
       padding: 0;
 }
+body{
+      background: #272b30;
+      font-family: "Helvetica Neue", Arial, sans-serif;
+      font-size:12px;
+}
