--- a/app/components/strategy/strategy.component.html
+++ b/app/components/strategy/strategy.component.html
@@ -1,26 +1,21 @@
-<div class="container-fluid">
+<div class="container-fluid avam-strategy">
   <div class="card">
     <div class="card-header">
       <div class="row">
         <div class="col-xs">
           <input type="text" placeholder="Search Strategy..." class="form-control form-control-sm">
         </div>
-        <div class="col-xs ">
-          <div class="text-xs-right">
-            <div class="input-group">
+        <div class="col-xs text-xs-right">
+            <div class="input-group d-block" > 
               <span class="input-group-btn">
-                <button class="btn btn-sm btn-primary">Strategy Ticket</button>
-                </span>
+                <button class="btn btn-sm btn-primary" [ngClass]="{'btn-primary' : isOrderTicket,'btn-secondary' : !isOrderTicket}"
+                  (click)="toggleOrderTicket(true)">Order Ticket</button>
+              </span>
               <span class="input-group-btn">
-                  <button class="btn btn-sm btn-secondary">Create Strategy</button>
-                </span>
-
-
+                  <button class="btn btn-sm btn-secondary" [ngClass]="{'btn-secondary' : isOrderTicket,'btn-primary' : !isOrderTicket}"
+                    (click)="toggleOrderTicket(false)">Create Strategy</button>
+              </span>
             </div>
-
-
-          </div>
-
         </div>
       </div>
     </div>
