--- a/app/components/strategy/strategyorderticket/strategyorderticket.component.html
+++ b/app/components/strategy/strategyorderticket/strategyorderticket.component.html
@@ -32,7 +32,7 @@
     </div>
   </div>
   <div class="row">
-    <div class="col-xs-5">
+    <div class="col-xs">
       <div class="strategy-leg-buy">
         <div class="header">2 YEAR</div>
         <div class="col-xs-12 form-group">
@@ -41,17 +41,17 @@
       </div>
     </div>
 
- <div class="col-xs-5">
+    <div class="col-xs">
       <div class="strategy-leg-sell">
         <div class="header">3 YEAR</div>
-        
+
       </div>
     </div>
 
-     <div class="col-xs-5">
+    <div class="col-xs">
       <div class="strategy-leg-sell">
         <div class="header">5 YEAR</div>
-        
+
       </div>
     </div>
   </div>
