--- a/app/components/strategy/strategy.component.css
+++ b/app/components/strategy/strategy.component.css
@@ -1,42 +1,37 @@
 .avam-strategy {
   color: #c8c8c8; }
 
-.container-fluid {
-  padding-left: 10px;
-  padding-right: 10px; }
-
-.row {
-  margin-right: -10px;
-  margin-left: -10px; }
-
-.col-xs-sm {
-  padding-left: 5px;
-  padding-right: 5px; }
-
-.form-control {
-  width: 100%;
-  padding-top: 2px;
-  padding-bottom: 2px;
-  padding-left: 1px;
-  padding-right: 1px; }
-
 .btn-sm {
   padding: 0.2rem 0.4rem; }
 
 .strategy-leg-sell {
-  border: 1px solid red;
-  border-radius: 2px; }
+  border: 1px solid #d9534f;
+  border-radius: 2px;
+  margin-bottom: .3rem; }
   .strategy-leg-sell > .header {
     padding-top: 2px;
     padding-bottom: 2px;
     padding-left: 5px;
-    background-color: red; }
+    background-color: #d9534f;
+    color: #fff; }
+  .strategy-leg-sell > .detail {
+    padding: 5px 3px; }
 
 .strategy-leg-buy {
-  border: 1px solid green;
-  border-radius: 2px; }
+  border: 1px solid #5cb85c;
+  border-radius: 2px;
+  margin-bottom: .3rem; }
   .strategy-leg-buy > .header {
     padding-top: 2px;
     padding-bottom: 2px;
     padding-left: 5px;
-    background-color: green; }
+    background-color: #5cb85c;
+    color: #fff; }
+  .strategy-leg-buy > .detail {
+    padding: 5px 3px; }
+
+.form-group {
+  margin-bottom: .5rem; }
+
+label {
+  margin-bottom: 0; }
