--- a/app/components/strategy/strategy.component.scss
+++ b/app/components/strategy/strategy.component.scss
@@ -1,46 +1,45 @@
+@import "../../../bsp-override/variables";
+
 .avam-strategy{
-    color:#c8c8c8;
-}
-.container-fluid {
-    padding-left: 10px;
-    padding-right: 10px;
-}
-.row {
-    margin-right: -10px;
-    margin-left: -10px;
-}
-.col-xs-sm {
-    padding-left: 5px;
-    padding-right: 5px;
-}
-.form-control {
-    width: 100%;
-    padding-top: 2px;
-    padding-bottom: 2px;
-    padding-left:1px;
-    padding-right:1px;
+    color:#c8c8c8;    
 }
 .btn-sm {
     padding: 0.2rem 0.4rem;
 }
 .strategy-leg-sell {    
-    border: 1px solid red;
+    border: 1px solid $brand-danger;
     border-radius: 2px;
+    margin-bottom: .3rem;
     > .header {
         padding-top: 2px;
         padding-bottom: 2px;
         padding-left: 5px;
-        background-color: red;
+        background-color: $brand-danger;
+        color: #fff;
     }
-
+    > .detail {
+        padding : 5px 3px;
+    }
 }
 .strategy-leg-buy {
-    border: 1px solid green;
+    border: 1px solid $brand-success;
     border-radius: 2px;
+    margin-bottom: .3rem;
     > .header {
         padding-top: 2px;
         padding-bottom: 2px;
         padding-left: 5px;
-        background-color: green;
+        background-color: $brand-success;
+        color: #fff;
     }
+    > .detail {
+        padding : 5px 3px;
+    }
+}
+.form-group {
+    margin-bottom: .5rem;
+}
+
+label {
+    margin-bottom: 0;
 }
