--- a/app/components/numberspinner/numberspinner.component.html
+++ b/app/components/numberspinner/numberspinner.component.html
@@ -1,5 +1,9 @@
 <div class="num-spinner">
-    <input type="text" name="num-spinner" (keydown.arrowUp) = "onMoveUp($event)" (keydown.arrowDown) = "onMoveDown($event)" >
+    <input type="text" name="num-spinner" 
+        (keypress) = "onKeyPress($event)"
+        (keydown.arrowUp) = "onMoveUp($event)" 
+        (keydown.arrowDown) = "onMoveDown($event)" [(ngModel)]="displayValue"
+        (change)="onValueChange($event)">
     <div class="spin-btn-box">
         <i class="spin-btn arrow-up" (click)="onMoveUp($event)"></i>
         <i class="spin-btn arrow-down" (click)="onMoveDown($event)"></i>
