--- a/app/components/host/host.component.html
+++ b/app/components/host/host.component.html
@@ -4,7 +4,10 @@
             <h1>Angular Reactive Form</h1>
         </div>
     </div>
-    <jett-strategy-builder>
-    </jett-strategy-builder>
+    <avam-grid>
+        
+    </avam-grid>
+    <!--<jett-strategy-builder>
+    </jett-strategy-builder>-->
 
 </div>
