--- a/styles/bootstrap4.css
+++ b/styles/bootstrap4.css
@@ -617,25 +617,25 @@ pre {
   padding-left: 3px;
   padding-right: 3px; }
 
-.row {
+.bs-row {
   display: flex;
   flex-wrap: wrap;
   margin-right: -3px;
   margin-left: -3px; }
   @media (min-width: 576px) {
-    .row {
+    .bs-row {
       margin-right: -3px;
       margin-left: -3px; } }
   @media (min-width: 768px) {
-    .row {
+    .bs-row {
       margin-right: -3px;
       margin-left: -3px; } }
   @media (min-width: 992px) {
-    .row {
+    .bs-row {
       margin-right: -3px;
       margin-left: -3px; } }
   @media (min-width: 1200px) {
-    .row {
+    .bs-row {
       margin-right: -3px;
       margin-left: -3px; } }
 
@@ -3112,9 +3112,8 @@ tbody.collapse.in {
 .card-header {
   padding: 0.25rem 0.25rem;
   margin-bottom: 0;
-  border-bottom: 1px solid rgba(0, 0, 0, 0.6);
-  background-image: linear-gradient(#484e55, #3a3f44 60%, #313539);
-  background-repeat: no-repeat; }
+  background-color: #f5f5f5;
+  border-bottom: 1px solid rgba(0, 0, 0, 0.6); }
   .card-header::after {
     content: "";
     display: table;
