--- a/app/components/grid-settings/grid-settings.component.html
+++ b/app/components/grid-settings/grid-settings.component.html
@@ -9,8 +9,8 @@
                               <ng-content select=".grid-settings-toolbar"></ng-content>
                         </div>
                         <div class="col-xs text-xs-right">
-                              <i class="fa" 
-                                    [ngClass]="{'fa-chevron-down': !isPanelOpen, 'fa-chevron-up' : isPanelOpen}"
+                              <i class="fa fa-15x" 
+                                    [ngClass]="{'fa-angle-double-down': !isPanelOpen, 'fa-angle-double-up' : isPanelOpen}"
                                     aria-hidden="true" (click)="isPanelOpen=!isPanelOpen"></i>
                         </div>
                   </div>
