--- a/app/components/grid-settings/grid-settings.component.scss
+++ b/app/components/grid-settings/grid-settings.component.scss
@@ -1,12 +1,12 @@
 .panel-open {
-      height: 200px;
-      transition: height 200ms;
+      height: 140px;
+      transition: height 150ms;
 }
 .panel-close {
       height: 0;
       overflow: hidden;
-      display: none;
-      transition: height 200ms;
+      transition: height 150ms;
+      padding-bottom: 0;
 }
 .fa-15x {
       font-size: 1.5em;
