--- a/app/components/grid-settings/grid-settings.component.html
+++ b/app/components/grid-settings/grid-settings.component.html
@@ -1,10 +1,7 @@
 <div class="container-fluid">
       <div class="card">
             <div class="card-header">
-                  <div class="bs-row">
-                        <!--<div class="col-xs-1">
-                              <i class="fa fa-cog" aria-hidden="true"></i>
-                        </div>-->
+                  <div class="bs-row">                        
                         <div class="col-xs-11">
                               <ng-content select=".grid-settings-toolbar"></ng-content>
                         </div>
@@ -16,7 +13,8 @@
                   </div>
             </div>
             <div class="card-block" [ngClass]="{'panel-open': isPanelOpen, 'panel-close' : !isPanelOpen}">
-                  <h1>This area will contain the settings ui</h1>
+                  <grid-settings-form>
+                  </grid-settings-form>
             </div>
             <div class="card-block">
                   <ng-content select=".grid-settings-content"></ng-content>
