--- a/bsp-override/_bootstrap-flexlayout.scss
+++ b/bsp-override/_bootstrap-flexlayout.scss
@@ -24,14 +24,14 @@ $enable-flex: true;
 // @import "../node_modules/bootstrap/scss/code";
 @import "../node_modules/bootstrap/scss/grid";
 // @import "../node_modules/bootstrap/scss/tables";
-// @import "../node_modules/bootstrap/scss/forms";
-// @import "../node_modules/bootstrap/scss/buttons";
+@import "forms"; // OP
+@import "../node_modules/bootstrap/scss/buttons"; // OP
 
 // Components
 // @import "../node_modules/bootstrap/scss/animation";
 // @import "../node_modules/bootstrap/scss/dropdown";
-// @import "../node_modules/bootstrap/scss/button-group";
-// @import "../node_modules/bootstrap/scss/input-group";
+@import "../node_modules/bootstrap/scss/button-group"; // OP 
+@import "../node_modules/bootstrap/scss/input-group"; // OP
 // @import "../node_modules/bootstrap/scss/custom-forms";
 // @import "../node_modules/bootstrap/scss/nav";
 // @import "../node_modules/bootstrap/scss/navbar";
