--- a/bsp-override/_bootstrap-flexlayout.scss
+++ b/bsp-override/_bootstrap-flexlayout.scss
@@ -22,7 +22,8 @@ $enable-flex: true;
 // @import "../node_modules/bootstrap/scss/type";
 // @import "../node_modules/bootstrap/scss/images";
 // @import "../node_modules/bootstrap/scss/code";
-@import "../node_modules/bootstrap/scss/grid";
+//@import "../node_modules/bootstrap/scss/grid";
+@import "grid";
 // @import "../node_modules/bootstrap/scss/tables";
 @import "forms"; // OP
 @import "../node_modules/bootstrap/scss/buttons"; // OP
