--- a/app/components/grid-settings/grid-settings.component.html
+++ b/app/components/grid-settings/grid-settings.component.html
@@ -33,8 +33,12 @@
                         Error
                   </button>
             </div>
+            <div class="card-block mt-3">
+                  <avam-animation></avam-animation>
+            </div>
       </div>
       <growl-alert [options]="options"></growl-alert>
+      <sticky-alert [message]="message"></sticky-alert>
 </div>
 
 <!--https://toddmotto.com/transclusion-in-angular-2-with-ng-content-->
