--- a/app/components/grid-settings/settings-form.component.html
+++ b/app/components/grid-settings/settings-form.component.html
@@ -1,20 +1,20 @@
-<form class="container-fluid">
+<form class="container-fluid" novalidate >
       <div class="bs-row">
             <div class="col-xs">
                   <div class="form-group">
                         <label class="col-form-label-sm">Columns</label>
-                        <select class="form-control form-control-sm">
-                              <option value="symbol">Symbol</option>
-                              <option value="exDestination">Destination</option>
-                              <option value="side">Side</option>
-                              <option value="price">Price</option>
+                        <select class="form-control form-control-sm" [(ngModel)]="selectedColumn" name="columnList"
+                              (change) = "onColumnChange()">
+                              <option *ngFor="let column of columns" [ngValue]="column" >{{column.name}}</option>
                         </select>
                   </div>
             </div>
             <div class="col-xs">
                    <div class="form-group">
                         <label class="col-form-label-sm">Current Caption</label>
-                        <input type="text" class="form-control form-control-sm" disabled>
+                        <input type="text" class="form-control form-control-sm" disabled 
+                              name="currentcaption" 
+                              [(ngModel)]="selectedColumn.caption">
                    </div>
             </div>
             <div class="col-xs">
@@ -23,6 +23,18 @@
                         <input type="text" class="form-control form-control-sm">
                    </div>
             </div>
+            <div class="col-xs">
+                  <div class="form-group">
+                        <custom-input 
+                              #size = "ngModel"  
+                              [(ngModel)]="selectedColumn.size" 
+                              required
+                              name="size">Size</custom-input>
+                        <div class="error" *ngIf="size.errors && size.touched">
+                              Error is here
+                        </div>
+                  </div>
+            </div>
       </div>
       <div class="bs-row">
             <div class="col-xs">
@@ -30,6 +42,11 @@
                         <button class="btn btn-sm" [ngClass]="{'btn-primary': isVisible, 'btn-secondary' : !isVisible}" (click)="isVisible=true">Visble</button>
                         <button class="btn btn-sm" [ngClass]="{'btn-primary': !isVisible, 'btn-secondary' : isVisible}" (click)="isVisible=false">Hidden</button>
                   </div>
+            </div>
+      </div>
+      <div class="bs-row mt-1">
+            <div class="col-xs">
+                  {{ selectedColumn | json }}
             </div>
       </div>
       <div class="bs-row mt-1">
