--- a/app/components/host/host.component.html
+++ b/app/components/host/host.component.html
@@ -4,10 +4,12 @@
             <h1>Angular Reactive Form</h1>
         </div>
     </div>
-    <avam-grid>
+    <!--<avam-grid>
         
-    </avam-grid>
+    </avam-grid>-->
     
-    
+    <ng2-anim>      
+        
+    </ng2-anim>
     
 </div>
